--- a/requirements.txt
+++ b/requirements.txt
@@ -1,78 +1,122 @@
 absl-py==2.3.1
-asttokens==3.0.0
+annotated-types==0.7.0
+anyio==4.8.0
 astunparse==1.6.3
 backtrader==1.9.78.123
-certifi==2025.8.3
-charset-normalizer==3.4.3
+beautifulsoup4==4.13.4
+breadability==0.1.20
+build==1.3.0
+certifi==2025.1.31
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
-comm==0.2.3
 contourpy==1.3.3
+cryptography==45.0.7
+curl_cffi==0.13.0
 cycler==0.12.1
-debugpy==1.8.17
-decorator==5.2.1
-executing==2.2.1
+docker==7.1.0
+docopt==0.6.2
 flatbuffers==25.9.23
-fonttools==4.60.0
+fonttools==4.59.2
+frozendict==2.4.6
 gast==0.6.0
+git-filter-repo==2.47.0
+gitdb==4.0.12
+GitPython==3.1.44
 google-pasta==0.2.0
+greenlet==3.1.1
 grpcio==1.75.1
+h11==0.14.0
 h5py==3.14.0
+httpcore==1.0.7
+httpx==0.28.1
+httpx-sse==0.4.0
+ibapi==9.81.1.post1
 idna==3.10
-ipykernel==6.30.1
-ipython==9.5.0
-ipython_pygments_lexers==1.1.1
-jedi==0.19.2
-joblib==1.5.2
-jupyter_client==8.6.3
-jupyter_core==5.8.1
+iniconfig==2.1.0
+investpy==1.0.8
+joblib==1.4.2
+json5==0.12.1
 keras==3.11.3
 kiwisolver==1.4.9
+lean==1.0.220
 libclang==18.1.1
+llvmlite==0.44.0
+lxml==5.3.1
+lxml_html_clean==0.4.1
 Markdown==3.9
 markdown-it-py==4.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.6
-matplotlib-inline==0.1.7
+mcp==1.3.0
+mcp-server-git @ file:///C:/Users/gabriel.casas/OneDrive/Documentos/Cline/MCP/git-server/src/git
 mdurl==0.1.2
 ml_dtypes==0.5.3
+multitasking==0.0.12
 namex==0.1.0
-nest-asyncio==1.6.0
-numpy==2.3.3
+nltk==3.9.1
+numba==0.61.2
+numpy==2.2.6
 opt_einsum==3.4.0
 optree==0.17.0
-packaging==25.0
+packaging==24.2
 pandas==2.3.2
-parso==0.8.5
+pandas-ta==0.4.71b0
+peewee==3.18.2
 pillow==11.3.0
-platformdirs==4.4.0
-prompt_toolkit==3.0.52
-protobuf==6.32.1
-psutil==7.1.0
-pure_eval==0.2.3
+platformdirs==4.3.8
+playwright==1.50.0
+pluggy==1.5.0
+protobuf==6.32.0
+pycountry==24.6.1
+pycparser==2.22
+pydantic==2.10.6
+pydantic-settings==2.8.1
+pydantic_core==2.27.2
+pyee==12.1.1
 Pygments==2.19.2
-pyparsing==3.2.5
+pyparsing==3.2.3
+pyproject_hooks==1.2.0
+pytest==8.3.5
+pytest-base-url==2.1.0
+pytest-playwright==0.7.0
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
+python-slugify==8.0.4
 pytz==2025.2
 pywin32==311
-pyzmq==27.1.0
-requests==2.32.5
+quantconnect-stubs==17268
+regex==2024.11.6
+requests==2.32.3
 rich==14.1.0
 scikit-learn==1.7.2
 scipy==1.16.2
-setuptools==80.9.0
+setuptools==76.0.0
 six==1.17.0
-stack-data==0.6.3
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.7
+sse-starlette==2.2.1
+starlette==0.46.1
+sumy==0.11.0
+TA-Lib @ file:///C:/Users/gabriel.casas/yahoo-finance-downloader/ta_lib-0.6.5-cp313-cp313-win_amd64.whl#sha256=3eafdf072ca2e92b20c86b690b68f2807e4ba1e8d4f8af158dec41abafaac844
 tensorboard==2.20.0
 tensorboard-data-server==0.7.2
 tensorflow==2.20.0
 termcolor==3.1.0
+text-unidecode==1.3
 threadpoolctl==3.6.0
-tornado==6.5.2
-traitlets==5.14.3
-typing_extensions==4.15.0
+tqdm==4.67.1
+typing_extensions==4.12.2
 tzdata==2025.2
-urllib3==2.5.0
-wcwidth==0.2.14
+Unidecode==1.4.0
+urllib3==2.3.0
+uv==0.6.5
+uvicorn==0.34.0
+websockets==15.0.1
 Werkzeug==3.1.3
 wheel==0.45.1
 wrapt==1.17.3
+yfinance==0.2.65
