Add scripts and notebooks for downloading, processing, and trading GOLD.PA data using Transformers
- Created `download_gold.ipynb` to download historical data for GOLD.PA from Yahoo Finance and save it in Parquet format.
- Developed `download_gold.py` script for the same functionality with error handling for missing data.
- Introduced `gold_transformer_tutorial.ipynb` for training a Transformer model on the downloaded data, including data preparation, model training, and evaluation.
- Implemented `run_gold_transformer.py` to streamline the entire process from data loading to backtesting a trading strategy using Backtrader.
- Added technical indicators and data normalization steps to enhance model performance.
- Included visualization of predictions and backtesting results.

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-"ibkr/*.csv" 
+# Ignorar datos históricos descargados
+ibkr/historic/
+
+# Ignorar ficheros de salida generados (predicciones, datos enriquecidos, etc.)
+ibkr/output/
+
+# Ignorar artefactos de modelos entrenados
+*.joblib
+*.h5
